apps/dev-interest-rate-service/rate-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: interest-rate
  name: interest-rate
  namespace: bank-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interest-rate
  template:
    metadata:
      labels:
        app: interest-rate
    spec:
      containers:
        - image: quay.io/amr_fahmy/dev-interest-rate-service:v04
          name: interest-rate
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
---
