apps/dev-interest-rate-service/rate-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: interest-rate
  name: interest-rate
  namespace: bank-services
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 8080
  selector:
    app: exchange
---
